fix : products
